plugins {
	id 'fabric-loom' version '1.7-SNAPSHOT'
	id 'maven-publish'
}

version = "" + project.minecraft_version + "+" + project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	maven { url "https://maven.shedaniel.me/" }
	maven { url "https://maven.architectury.dev/" }
	maven { url "https://maven.terraformersmc.com/" }
	maven { url "https://pluto-mod-maven.web.app/maven" }
	maven { url "https://maven.parchmentmc.org" }
	maven { url "https://maven.quiltmc.org/repository/release" }
	maven { url "https://api.modrinth.com/maven" }
	maven { url "https://maven.nucleoid.xyz/" }
}

loom {

    accessWidenerPath = file("src/main/resources/pdapi.accesswidener")

	runs {
		configureEach {
			vmArg "-XX:+AllowEnhancedClassRedefinition"
			vmArg "-XX:+IgnoreUnrecognizedVMOptions"
		}

		server {
			runDir 'run/server'
		}
	}

}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings(loom.layered {
		it.mappings "org.quiltmc:quilt-mappings:${minecraft_version}+build.${quilt_mappings}:intermediary-v2"
		//it.parchment "org.parchmentmc.data:parchment-${minecraft_version}:${parchment_version}@zip"  Fuck Parchment
		it.officialMojangMappings { nameSyntheticMembers = false }
	})

	modCompileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:${project.rei_version}"
	modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
	// modCompileOnly "maven.modrinth:dehydration:${project.dehydration_version}"
	modImplementation "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_version}"

	modApi "dev.architectury:architectury-fabric:$architectury_version"
}

processResources {
	inputs.property "version", mod_version

	filesMatching("fabric.mod.json") {
		expand "version": mod_version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	withSourcesJar()
	withJavadocJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}"}
	}
}

publishing {
	repositories {
		maven {
			url = System.getenv("PUBLISH_LOCATION")
		}
	}

	publications {

		mavenJava(MavenPublication) {
			artifactId = 'pdapi'

			from(components.java)
			pom.withXml {
				Node pom = asNode()
				pom.dependencies.'*'.findAll() {
					it.artifactId.text() != 'cloth-config-fabric'
				}.each() {
					it.parent().remove(it)
				}
			}
		}
	}
}
